Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-1439

tolerate system time being changed to earlier point when checking resource context timeout

    XMLWordPrintableJSON

Details

    Description

      When the system time is changed to an earlier point, the resource context maybe timed out because the context's latest action time is larger than checking time.

      This fix is to adjust latest action time to new system time when it is adjusted to earlier point.

      Attachments

        Issue Links

          Activity

            People

              yjin Yi Jin
              yjin Yi Jin
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: