HAWQ-1439. tolerate system time being changed to earlier point when checking resource context timeout